--- a/000-default.conf
+++ b/000-default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 
-    ServerName telemedi-zadanie.localhost
+    ServerName localhost
     DocumentRoot /var/www/html/public
     <Directory /var/www/html/public>
         Options Indexes FollowSymLinks
