--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -8,6 +8,10 @@ setupcheck:
     path: /api/setup-check
     controller: App\Controller\DefaultController::setupCheck
 
+exchange-rates:
+  path: /exchange-rates
+  controller: App\Controller\ExchangeRatesController::index
+
 index:
     path: /{wildcard}
     defaults: {
@@ -16,4 +20,3 @@ index:
     requirements:
         wildcard: .*
     # controller: App\Controller\DefaultController::index
-
