--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: Dockerfile
     container_name: recruitment-webserver
     restart: unless-stopped
+    volumes:
+      - /Users/rafalgron/PhpstormProjects/recruitment_task_fullstack:/var/www/html
     ports:
       - "80:80"
     environment:
